renamed + added credits

--- a/myFirstSequencer/index.html
+++ b/myFirstSequencer/index.html
@@ -16,6 +16,14 @@
 			<div id="Content">
 				<div id="StartButton"></div>
 				<div id="Sequencer"></div>
+				<div id="Explanation">
+					Simple Step Sequencer
+					<br>
+					<br>
+					Made with <a href="http://tonenotone.github.io/Tone.js/doc/index.html" target="_blank">Tone.js</a>, adapted from 
+					<a href="http://tonenotone.github.io/Tone.js/examples/stepSequencer.html" target="_blank"> this example</a>. 
+					Uses the FMSynth instrument, along with a simple music theory library that produces 8 steps randomly in a given scale. 
+				</div>
 			</div>
 		</div>
     </body>
