--- a/stockSequencer/index.html
+++ b/stockSequencer/index.html
@@ -13,12 +13,17 @@
 				}
 
 				body {
+					background-color: #EADBC4;
 					padding: 50px 0 0 0;
 				}
 
 				.navbar-toggle {
 					float: left;
 					margin-left: 15px;
+				}
+
+				.current-step {
+					stroke: #00ff00;
 				}
 
 				@media (min-width: 0) {
