working zoom alters sequence

--- a/stockMusic/index.html
+++ b/stockMusic/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Comparison Chart Test</title>
+    <title>Stock Music</title>
     <meta charset="utf-8">
 
     <link rel="stylesheet" type="text/css" href="style/styles.css">
+    <script type="text/javascript" src="node_modules/Tone.min.js"></script>
+    <script type="text/javascript" src="node_modules/Tone.Preset.js"></script>
 </head>
 <body>
 	<div id="chart"></div>
