--- a/stockMusic/index.html
+++ b/stockMusic/index.html
@@ -17,8 +17,8 @@
 			<input id="Stock1" type="text" class="form-control" placeholder="Enter a ticker, e.g. 'AAPL'" style="margin-bottom: 10px;">
 			<button id="addStock" class="btn btn-default">Submit</button>
 		</div>
-		<ul id="stocklist" class="list-group" style="margin: 15px;">
-		</ul>
+		<div id="stocklist" class="btn-group-vertical" role="group" aria-label="..." style="padding: 15px">
+		</div>
 	</nav>
 	<div class="navbar navbar-default navbar-fixed-top">
 		<button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
